IGBF-3563: Replace deprecated Float and Double